WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207216
TestWebKitAPI: Handle case where test result does not contain path
https://bugs.webkit.org/show_bug.cgi?id=207216
Summary
TestWebKitAPI: Handle case where test result does not contain path
Jonathan Bedard
Reported
2020-02-04 11:49:08 PST
It is possible for an API test to fail in a way which does not tag the test failure with a path. This results in an unhelpful segmentation fault, which surpasses the actual error message.
Attachments
Patch
(1.81 KB, patch)
2020-02-04 11:55 PST
,
Jonathan Bedard
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2020-02-04 11:55:10 PST
Created
attachment 389686
[details]
Patch
WebKit Commit Bot
Comment 2
2020-02-04 14:05:05 PST
The commit-queue encountered the following flaky tests while processing
attachment 389686
[details]
: editing/spelling/spellcheck-async-remove-frame.html
bug 158401
(authors:
morrita@google.com
,
rniwa@webkit.org
, and
tony@chromium.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3
2020-02-04 14:05:40 PST
Comment on
attachment 389686
[details]
Patch Clearing flags on attachment: 389686 Committed
r255695
: <
https://trac.webkit.org/changeset/255695
>
WebKit Commit Bot
Comment 4
2020-02-04 14:05:41 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2020-02-04 14:07:04 PST
<
rdar://problem/59164080
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug