Tools/TestWebKitAPI/TestsController.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2010 Apple Inc. All rights reserved.
+ * Copyright (C) 2010, 2020 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -40,7 +40,12 @@ class Printer : public ::testing::EmptyTestEventListener {
             return;
 
         std::stringstream stream;
-        stream << "\n" << test_part_result.file_name() << ":" << test_part_result.line_number() << "\n" << test_part_result.summary() << "\n\n";
+        stream << "\n";
+        if (test_part_result.file_name())
+            stream << test_part_result.file_name() << ":" << test_part_result.line_number();
+        else
+            stream << "File name unavailable";
+        stream << "\n" << test_part_result.summary() << "\n\n";
         failures += stream.str();
     }
 
